--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Track a Nap App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <meta name="theme-color" content="#000000" />
+    <link href="<%= BASE_URL %>manifest.json" rel="manifest">
+    <link rel="icon" sizes="192x192" href="<%= BASE_URL %>icon.png">
   </head>
   <body>
     <noscript>
